# uvworkspacetest

./: pyproject.toml
