[project]
name = "bg-myproject"
version = "0.3.0"
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
bgtrainer = ["bgtrainer @ git+https://github.com/briangallagher/uvworkspacetest@main#subdirectory=members/bgtrainer"]
bgoptimizer = ["bgoptimizer @ git+https://github.com/briangallagher/uvworkspacetest@main#subdirectory=members/bgoptimizer"]
all = ["bgtrainer", "bgoptimizer"]

[tool.uv.workspace]
members = ["members/bgtrainer", "members/bgoptimizer"]

[tool.uv.sources]
bgtrainer = { workspace = true }
bgoptimizer = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = ["members/*"]  # Exclude the sub-package directories








